<resources>
    <string name="app_name">Acuma</string>
    <string name="title_home">Home</string>
    <string name="title_categories">Categories</string>
    <string name="title_history">History</string>
    <string name="create_category">Create category</string>
    <string name="transfer_money_between_categories">Transfer money between categories</string>
    <string name="deposit_money">Deposit money</string>
    <string name="withdraw_money">Withdraw money</string>
    <string name="category_name">Category name</string>
    <string name="goal_optional">Goal (optional)</string>
    <string name="create">Create</string>
    <string name="deposit">Deposit</string>
    <string name="amount">Amount</string>
    <string name="distribute">Distribute</string>
    <string name="withdraw">Withdraw</string>
    <string name="transfer">Transfer</string>
    <string name="edit_category">Edit category</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="reserve">Reserve</string>
    <string name="comment">Comment</string>
    <string name="filter">Filter</string>
</resources>