<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/bottom_sheet_bg"
    android:padding="16dp" >

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:text="@string/transfer"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/categories_spinner_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:paddingBottom="16dp"
        android:textSize="14sp" />


    <Spinner
        android:id="@+id/categories_spinner_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:paddingBottom="16dp"
        android:textSize="14sp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:hint="@string/amount"
        android:inputType="numberDecimal"
        android:paddingBottom="16dp"
        android:textSize="14sp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:hint="@string/comment"
        android:inputType="text"
        android:paddingBottom="16dp"
        android:textSize="14sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/transfer_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:contentDescription="@string/transfer"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:text="@string/transfer" />
</LinearLayout>
